--- a/src/components/Header/Menu/Menu.scss
+++ b/src/components/Header/Menu/Menu.scss
@@ -19,19 +19,11 @@ a {
     text-decoration: none;;
 }
 
-/* Top Navigation Bar */
-
-/* <nav> */
 .navbar {
-    // height: var(--nav-size);
-    // background-color: var(--bg);
-    // padding: 0 1rem;
-    // border-bottom: var(--border);
-
     position: fixed;
     top: 0; /* Stick it to the top */
     max-height: 90px;
-    width: 100vw;
+    width: 100%;
   
     display: grid;
     grid-template-areas: "logo nav";
@@ -44,27 +36,24 @@ a {
     &-heading {
         margin-left: 2rem;
     }
-  }
-  
-  /* <ul> */
-  .navbar-nav {
-    max-width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  /* <li> */
-  .nav-item {
+
+    &-nav {
+        max-width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+    
+.nav-item {
     margin-right: 1rem;
     width: calc(var(--nav-size) * 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
   
-  /* Icon Button */
-  .icon-button {
+.icon-button {
     --button-size: calc(var(--nav-size) * 0.5);
     width: var(--button-size);
     height: var(--button-size);
@@ -76,93 +65,99 @@ a {
     align-items: center;
     justify-content: center;
     transition: filter 300ms;
-  }
+
+    &:hover {
+        filter: brightness(0.9);
+    }
+
+    svg {
+        fill: var(--text-color);
+        width: 20px;
+        height: 20px;
+    }
+}
   
-  .icon-button:hover {
-    filter: brightness(0.9);
-  }
-  
-  .icon-button svg { 
-    fill: var(--text-color);
-    width: 20px;
-    height: 20px;
-  }
-  
-  
-  /* Dropdown Menu */
-  
-  .dropdown {
+.dropdown {
     position: absolute;
     top: 58px;
     width: 300px;
-    transform: translateX(-45%);
+    transform: translateX(-40%);
     background-color: var(--bg);
     border: var(--border);
     border-radius: var(--border-radius);
     padding: 1rem;
     overflow: hidden;
     transition: height var(--speed) ease;
-  }
+    box-shadow: 5px 5px 2px 0px rgba(0,0,0,0.45);
+}
   
-  .menu {
+.menu {
     width: 100%;
-  }
+
+    &-item {
+        height: 50px;
+        display: flex;
+        align-items: center;
+        border-radius: var(--border-radius);
+        transition: background var(--speed);
+        padding: 0.5rem;
+
+        .icon-button {
+            margin-right: 0.5rem;
+
+            &:hover {
+                filter: none;
+            }
+        }
+
+        &:hover {
+            background-color: #dadada;
+        }
+    }
+}
   
-  .menu-item {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    border-radius: var(--border-radius);
-    transition: background var(--speed);
-    padding: 0.5rem;
-  }
-  
-  .menu-item .icon-button {
-    margin-right: 0.5rem;
-  }
-  
-  
-  .menu-item .icon-button:hover {
-    filter: none;
-  }
-  
-  .menu-item:hover {
-    background-color: #dadada;
-  }
-  
-  .icon-right {
+.icon-right {
     margin-left: auto;
-  }
+}
   
-  /* CSSTransition classes  */
-  .menu-primary-enter {
-    position: absolute;
-    transform: translateX(-110%);
-  }
-  .menu-primary-enter-active {
-    transform: translateX(0%);
-    transition: all var(--speed) ease;
-  }
-  .menu-primary-exit {
-    position: absolute;
-  }
-  .menu-primary-exit-active {
-    transform: translateX(-110%);
-    transition: all var(--speed) ease;
-  }
-  
-  
-  .menu-secondary-enter {
-    transform: translateX(110%);
-  }
-  .menu-secondary-enter-active {
-    transform: translateX(0%);
-    transition: all var(--speed) ease;
-  }
-  .menu-secondary-exit {
-    position: absolute;
-  }
-  .menu-secondary-exit-active {
-    transform: translateX(110%);
-    transition: all var(--speed) ease;
-  }
+/* CSSTransition classes  */
+.menu-primary {
+    &-enter {
+        position: absolute;
+        transform: translateX(-110%);
+    
+        &-active {
+            transform: translateX(0%);
+            transition: all var(--speed) ease;
+        }
+    }
+
+    &-exit {
+        position: absolute;
+
+        &-active {
+            transform: translateX(-110%);
+            transition: all var(--speed) ease;
+        }
+    }
+}
+
+.menu-secondary {
+    &-enter {
+        transform: translateX(110%);
+
+        &-active {
+            transform: translateX(0%);
+            transition: all var(--speed) ease;
+        }
+    }
+
+    &-exit {
+        position: absolute;
+
+        &-active {
+            transform: translateX(110%);
+            transition: all var(--speed) ease;
+        }
+    }
+}
