--- a/src/pages/LinePage/LinePage.scss
+++ b/src/pages/LinePage/LinePage.scss
@@ -3,5 +3,5 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 5rem;
+    margin: 3rem 3rem;
 }
