Toggle button props and styling updated

--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -37,11 +37,11 @@
     line-height: 16px;
     font-weight: bold;
     cursor: pointer;
-    background-color: #c4c4c4;
+    background-color: #fff;
     color: white;
     padding: 8px 12px;
     border-radius: 18px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
     min-width: 46px;
     display: flex;
     justify-content: center;
@@ -60,6 +60,11 @@
 
 .disabled {
     background-color: #c4c4c4;
-    left: 2px;
+    left: 0px;
+}
+
+.off {
+    background-color: #fff;
+    left: 0px;
 }
   
