--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,70 +1,74 @@
 .toggle {
-    &-container {
-        width: 70px;
-        background-color: #03c443;
-        cursor: pointer;
-        user-select: none;
-        border-radius: 3px;
-        height: 32px;
-        width: 100%;
-        position: relative;
-        transition: all .2s ease-in-out;
-        border-radius: 34px;
-
-        &:before {
-            border-radius: 50%;
-        }
-
-        &-disabled {
-            background-color: #c4c4c4;
-        }
-    }
-
-    &-label {
-        font-weight: 700;
-        margin-bottom: 0.25rem;
-    }
-
     &-wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 }
+
+.info-label {
+    font-weight: 700;
+    margin-bottom: 0.25rem; 
+}
   
-.dialog-button {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    background-color: #fff;
-    color: white;
-    padding: 8px 12px;
-    border-radius: 18px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
-    min-width: 46px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 38px;
-    min-width: unset;
-    border-radius: 3px;
-    box-sizing: border-box;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+.toggle-label {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .toggle-label input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
     position: absolute;
-    left: 34px;
-    height: 100%;
-    transition: all 0.3s ease;
-    border-radius: 50%;
-}
-
-.disabled {
-    background-color: #c4c4c4;
-    left: 0px;
-}
-
-.off {
-    background-color: #fff;
-    left: 0px;
-}
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
   
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
